<resources>
    <string name="app_name">Booking Service</string>
    <string name="API_KEY">7888a463f565559cca191816a88cda37</string>
    <string name="title_activity_utama">activity_utama</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--booking-->
    <string name="booking_date">Tanggal Booking</string>
    <string name="booking_time">Jam Booking</string>
    <string name="booking_no_polisi">No Polisi</string>
    <string name="booking_category">Kategori Service</string>
    <string name="booking_type_mobil">Tipe Mobil</string>
    <string name="booking_jenis_mobil">Jenis Mobil</string>
    <string name="booking_lokasi_service">Lokasi Service</string>
    <string name="booking_tahun_mobil">Tahun Mobil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_login">Silakan Masuk</string>
    <string name="tag_register">Silakan Register</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="no_hp">No HP</string>
    <string name="retype_password">Ketik ulang password</string>
    <string name="register">Register</string>
    <string name="swipe_left_for_register">Swipe left for register</string>
    <string name="swipe_right_for_login">Swipe right for login</string>
</resources>
